<?xml version="1.0"?>
<package format="2">
  <name>centermask2</name>
  <version>0.1.0</version>
  <description>The centermask2 package</description>

  <maintainer email="mark.finean@stx.ox.ac.uk">Mark Finean</maintainer>

  <license>MIT</license>

  <!-- <url type="website">https://github.com/DavidFernandezChaves/Detectron2_ros</url> -->

  <author email="mark.finean@stx.ox.ac.uk">Mark Finean</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
